--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
   <button type="button" routerLink="">Home</button>
   <button type="button" routerLink="/a/a1">A</button>
   <button type="button" routerLink="b">B</button>
+  <button type="button" routerLink="/list">list</button>
 </main>
 <router-outlet></router-outlet>
