--- a/src/app/list/detail/detail.component.html
+++ b/src/app/list/detail/detail.component.html
@@ -6,7 +6,8 @@
     <div class="itemDetails">
         <h5 class="title">{{item.title}}</h5>
         <prices [data]="item.prices" (selectedPrice)="selectPrice($event)" />
-        <strong class="selectedPrice">{{selectedPrice | currency: 'USD'}}</strong>
+        <strong *ngIf="!!selectedPrice" class="selectedPrice">{{selectedPrice | roundDecimals | currency:
+            'USD'}}</strong>
     </div>
 </div>
 <div class="description"></div>
