--- a/src/app/list/detail/detail.component.html
+++ b/src/app/list/detail/detail.component.html
@@ -6,8 +6,11 @@
     <div class="itemDetails">
         <h5 class="title">{{item.title}}</h5>
         <prices [data]="item.prices" (selectedPrice)="selectPrice($event)" />
-        <strong *ngIf="!!selectedPrice" class="selectedPrice">{{selectedPrice | roundDecimals | currency:
+        <strong *ngIf="!!selectedPrice" class="selectedPrice"
+            [ngClass]="{notOffer: !!item.offerDiscount}">{{selectedPrice |
+            roundDecimals | currency:
             'USD'}}</strong>
+        <strong *ngIf="!!item.offerDiscount" class="offerPrice">{{offerPrice | currency: 'USD'}}</strong>
     </div>
 </div>
 <div class="description"></div>
