--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<main class="main">
-  common data <br>
+<main class="main row">
   <button type="button" routerLink="">Home</button>
   <button type="button" routerLink="/a/a1">A</button>
   <button type="button" routerLink="b">B</button>
   <button type="button" routerLink="/list">list</button>
+  <button type="button" routerLink="/individual">Individual ex</button>
 </main>
+<br>
 <router-outlet></router-outlet>
